--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,6 @@ actix-web = "1.0.0"
 actix-web-actors = "1.0.0"
 env_logger="0.6.2"
 actix-files = "0.1.1"
+serde="1.0.99"
+serde_json="1.0.40"
+serde_derive="1.0.99"
